# latex-to-word-journal-helper

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: validate.yml
docs/: workflow.md
examples/output/: conversion_manifest.json  conversion_plan.md  journal_handoff.docx
examples/synthetic_paper/: main.tex  references.bib
examples/synthetic_paper/sections/: introduction.tex  methods.tex  results.tex
latex_word_helper/: __init__.py  cli.py  docx.py  models.py  report.py  scanner.py
scripts/: validate_public_assets.py
tests/: test_helper.py
